--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,13 +46,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Basket.cs" />
-     <Compile Include="Assets\BasketInnerCollisionManager.cs" />
-     <Compile Include="Assets\BasketOuterCollisionManager.cs" />
-     <Compile Include="Assets\Flannel.cs" />
-     <Compile Include="Assets\FlannelManager.cs" />
-     <Compile Include="Assets\Highscore.cs" />
-     <Compile Include="Assets\Score.cs" />
+     <Compile Include="Assets\scripts\Basket.cs" />
+     <Compile Include="Assets\scripts\BasketInnerCollisionManager.cs" />
+     <Compile Include="Assets\scripts\BasketOuterCollisionManager.cs" />
+     <Compile Include="Assets\scripts\Faller.cs" />
+     <Compile Include="Assets\scripts\FlannelManager.cs" />
+     <Compile Include="Assets\scripts\Highscore.cs" />
+     <Compile Include="Assets\scripts\Score.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
