--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,9 +50,13 @@
      <Compile Include="Assets\scripts\BasketInnerCollisionManager.cs" />
      <Compile Include="Assets\scripts\BasketOuterCollisionManager.cs" />
      <Compile Include="Assets\scripts\Faller.cs" />
+     <Compile Include="Assets\scripts\Flannel.cs" />
      <Compile Include="Assets\scripts\FlannelManager.cs" />
      <Compile Include="Assets\scripts\Highscore.cs" />
+     <Compile Include="Assets\scripts\Lives.cs" />
+     <Compile Include="Assets\scripts\PlayButton.cs" />
      <Compile Include="Assets\scripts\Score.cs" />
+     <Compile Include="Assets\scripts\ScoreAndHighscoreResult.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
