--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,21 +46,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\CoinsStatus.cs" />
-     <Compile Include="Assets\FlannelCell.cs" />
-     <Compile Include="Assets\LeaveShopButton.cs" />
-     <Compile Include="Assets\ShopButton.cs" />
      <Compile Include="Assets\scripts\Basket.cs" />
      <Compile Include="Assets\scripts\BasketInnerCollisionManager.cs" />
      <Compile Include="Assets\scripts\BasketOuterCollisionManager.cs" />
+     <Compile Include="Assets\scripts\CoinsStatus.cs" />
      <Compile Include="Assets\scripts\Faller.cs" />
      <Compile Include="Assets\scripts\Flannel.cs" />
+     <Compile Include="Assets\scripts\FlannelCell.cs" />
      <Compile Include="Assets\scripts\FlannelManager.cs" />
      <Compile Include="Assets\scripts\Highscore.cs" />
+     <Compile Include="Assets\scripts\LeaveShopButton.cs" />
      <Compile Include="Assets\scripts\Lives.cs" />
      <Compile Include="Assets\scripts\PlayButton.cs" />
+     <Compile Include="Assets\scripts\Powerup.cs" />
+     <Compile Include="Assets\scripts\PowerupManager.cs" />
+     <Compile Include="Assets\scripts\PowerupUser.cs" />
      <Compile Include="Assets\scripts\Score.cs" />
      <Compile Include="Assets\scripts\ScoreAndHighscoreResult.cs" />
+     <Compile Include="Assets\scripts\ShopButton.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
