--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\MobileNativePopups\Examples\Scripts\TestScene.cs" />
      <Compile Include="Assets\scripts\Basket.cs" />
      <Compile Include="Assets\scripts\BasketInnerCollisionManager.cs" />
      <Compile Include="Assets\scripts\BasketOuterCollisionManager.cs" />
@@ -55,6 +56,7 @@
      <Compile Include="Assets\scripts\FlannelCell.cs" />
      <Compile Include="Assets\scripts\FlannelManager.cs" />
      <Compile Include="Assets\scripts\Highscore.cs" />
+     <Compile Include="Assets\scripts\LeaderboardButton.cs" />
      <Compile Include="Assets\scripts\LeaveShopButton.cs" />
      <Compile Include="Assets\scripts\Lives.cs" />
      <Compile Include="Assets\scripts\PlayButton.cs" />
@@ -85,6 +87,9 @@
  </Reference>
  <Reference Include="UnityEngine.VR">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
+ </Reference>
+ <Reference Include="MobileNativePopups">
+ <HintPath>/Users/skunkmb/Desktop/Main/Dev/Flannel Flow/Assets/MobileNativePopups/MobileNativePopups.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
