--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -110,6 +110,9 @@
  <Reference Include="MobileNativePopups">
  <HintPath>/Users/skunkmb/Desktop/Main/Dev/Flannel Flow/Assets/MobileNativePopups/MobileNativePopups.dll</HintPath>
  </Reference>
+ <Reference Include="UnityEngine.Advertisements.Editor">
+ <HintPath>/Users/skunkmb/Desktop/Main/Dev/Flannel Flow/Assets/UnityAds/UnityEngine.Advertisements.Editor.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
  <HintPath>/Applications/Unity/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
  </Reference>
