--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\BasicAdPlayer.cs" />
      <Compile Include="Assets\MobileNativePopups\Examples\Scripts\TestScene.cs" />
      <Compile Include="Assets\scripts\Basket.cs" />
      <Compile Include="Assets\scripts\BasketInnerCollisionManager.cs" />
@@ -90,6 +91,9 @@
  </Reference>
  <Reference Include="MobileNativePopups">
  <HintPath>/Users/skunkmb/Desktop/Main/Dev/Flannel Flow/Assets/MobileNativePopups/MobileNativePopups.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Advertisements.Editor">
+ <HintPath>/Users/skunkmb/Desktop/Main/Dev/Flannel Flow/Assets/UnityAds/UnityEngine.Advertisements.Editor.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
