--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,7 +46,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\MobileNativePopups\Examples\Scripts\TestScene.cs" />
      <Compile Include="Assets\scripts\BasicAdPlayer.cs" />
      <Compile Include="Assets\scripts\Basket.cs" />
      <Compile Include="Assets\scripts\BasketInnerCollisionManager.cs" />
@@ -60,6 +59,8 @@
      <Compile Include="Assets\scripts\LeaderboardButton.cs" />
      <Compile Include="Assets\scripts\LeaveShopButton.cs" />
      <Compile Include="Assets\scripts\Lives.cs" />
+     <Compile Include="Assets\scripts\Modal.cs" />
+     <Compile Include="Assets\scripts\OKButton.cs" />
      <Compile Include="Assets\scripts\PlayButton.cs" />
      <Compile Include="Assets\scripts\Powerup.cs" />
      <Compile Include="Assets\scripts\PowerupManager.cs" />
@@ -91,9 +92,6 @@
  </Reference>
  <Reference Include="UnityEngine.Advertisements.Editor">
  <HintPath>/Users/skunkmb/Desktop/Main/Dev/Flannel Flow/Assets/UnityAds/UnityEngine.Advertisements.Editor.dll</HintPath>
- </Reference>
- <Reference Include="MobileNativePopups">
- <HintPath>/Users/skunkmb/Desktop/Main/Dev/Flannel Flow/Assets/MobileNativePopups/MobileNativePopups.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
