Update for Version 1.0.4.
 - Add a Gold Flannel.
 - Fix a bug where a freeze powerup would last forever if two were used
   in a row.
 - Increase the upper score limit.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
      <Compile Include="Assets\scripts\Score.cs" />
      <Compile Include="Assets\scripts\ScoreAndHighscoreResult.cs" />
      <Compile Include="Assets\scripts\ShopButton.cs" />
+     <Compile Include="Assets\scripts\Storage.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
